# lgvl_dev

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
app/: clock_app.c  clock_app.h  energy_app.c  energy_app.h  energy_app_mqtt.c  home_app.c  home_app.h  knob.sll  knob.spj  settings_app.c  settings_app.h  tz_utils.c  tz_utils.h  weather_app.c  weather_app.h
app/clock/: clock_app.c  clock_app.h  clock_controller.c  clock_controller.h
app/clock/ui/: CMakeLists.txt  clock.sll  clock.spj  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
app/clock/ui/components/: ui_comp_hook.c
app/clock/ui/screens/: ui_ClockScreen.c  ui_ClockScreen.h  ui_Screen1.c  ui_Screen1.h
app/energy/: CMakeLists.txt  energy_app.c  energy_app.h  energy_app_mqtt.c  energy_controller.c  energy_controller.h
app/energy/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Home.c  ui_Settings.c  ui_Weather.c  ui_clock.c  ui_energy.c  ui_energy.h  ui_helpers.c
app/home/: home_app.c  home_app.h  home_controller.c  home_controller.h
app/home/ui/: ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_helpers.c  ui_helpers.h
app/settings/: settings_app.c  settings_app.h  settings_controller.c  settings_controller.h
app/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Energy.c  ui_Home.h  ui_Settings.c  ui_Settings.h  ui_Weather.c  ui_clock.c  ui_clock.h  ui_comp_hook.c  ui_custom_load.c  ui_custom_load.h  ui_events.h  ui_helpers.h
app/ui/images/: ui_img_black_circle_360_png.c
app/ui/screens/: ui_Energy.c  ui_Energy.h  ui_Home.c  ui_Home.h  ui_Settings.c  ui_Settings.h  ui_Weather.c  ui_Weather.h  ui_clock.c  ui_clock.h
app/weather/: weather_app.c  weather_app.h  weather_controller.c  weather_controller.h
components/i2c_bsp/: i2c_bsp.c
components/lcd_bl_pwm_bsp/: lcd_bl_pwm_bsp.c
components/lcd_touch_bsp/: lcd_touch_bsp.h
drivers/: display_driver.c  display_driver.h  user_config.h
main/: CMakeLists.txt  app_manager.c  app_manager.h  display_driver.c  display_driver.h  lvgl_manager.c  lvgl_manager.h  main.c  mqtt_manager.c  mqtt_manager.h  provisioning_server.c  provisioning_server.h  touch_manager.c  touch_manager.h  user_config.h  wifi_manager.c
managers/: CMakeLists.txt  app_manager.c  app_manager.h  encoder_manager.c  encoder_manager.h  lvgl_manager.c  mqtt_manager.c  mqtt_manager.h  persistent_data_manager.c  persistent_data_manager.h  power_manager.c  power_manager.h  provisioning_server.c  provisioning_server.h  time_manager.c  time_manager.h  touch_manager.c  touch_manager.h  wifi_manager.c  wifi_manager.h
managers/encoder_manager/: CMakeLists.txt  encoder_manager.c  encoder_manager.h
ui/: ui.c
